# fast_flow

./: Cargo.toml  make.sh  systemd.init
src/: main.rs
src/core/utils/: command.rs  filesystem.rs  git.rs  mod.rs
src/utils/: content.rs  daemon.rs  files.rs  mod.rs  structs.rs  subcommands.rs  table.rs  utils.rs
