[package]
name = "fastflow"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.0", features = ["derive"] }
daemonize = "0.5.0"
fern = "0.7.1"
log = "0.4.27"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0"
simplelog = "0.12.2"
tokio = { version = "1.44.2", features = ["full"] }
