[package]
name = "fastflow"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.0", features = ["derive"] }
console = "0.15.11"
daemonize = "0.5.0"
fern = "0.7.1"
log = "0.4.27"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0"
sysinfo = "0.35.0"
tabled = "0.19.0"
terminal_size = "0.4.2"
tokio = { version = "1.44.2", features = ["full"] }
